--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li><img width="495" height="371" src="./img/98Uom104h70_Ploscha_Runok_u_Lvovy_mysk._peyz_Ukrayna.jpg" alt="Плща Ринок"></li>
     </ul>
     <li><p class="market-link">
-        Площа Ринок була закладена в період правління князя Данила Романовича. Протягом багатьох років вона виконувала роль осередка торгівлі та громадського життя середньовічного населеного пункту. Над будівлями майдану працювали австрійські та італійські архітектори. На площі міста Лева знаходиться сорок чотири кам'яні, цегляні споруди. Вони виконані переважно в стилі ренесанс, подекуди в їх оформленні прослідковуються готичні елементи. Над проектами кам'яниць працювали архітектори Павло Римлянин, Бернард Меретин, Петро Красовський, Петро з Барбони та інші.
+        Площа Ринок була закладена в період правління короля Данила Романовича. Протягом багатьох років вона виконувала роль осередка торгівлі та громадського життя середньовічного населеного пункту. Над будинками майдану працювали італійські та  австрійські архітектори. На площі міста Лева знаходиться сорок чотири споруди з цегли і камню. Вони виконані переважно в стилі ренесанс, подекуди в їх оформленні прослідковуються готичні елементи. Над проектами кам'яниць працювали архітектори  Петро Красовський, Петро з Барбони ,  Павло Римлянин, Бернард Меретин та інші.
         
         </p></li>
     </section>
@@ -54,7 +54,7 @@
     <li><img width="495" height="371" src="./img/Театрбібі.jpg" alt="Львівська Опера"></li>
     <li><img  width="495" height="371" src="./img/бубу.jpg" alt="Львівська Опера"></li>
 </ul>
-    <li><p class="lviv">Львівський національний академічний театр опери та балету імені Соломії Крушельницької будувався протягом 1897 – 1900-их років. Над його проектом свого часу працював архітектор Зігмунд Горголевський. Будівля зведена в стилях – ренесанс та бароко. Об'єкт вражає, як ззовні, так і всередині, багатим скульптурним декором. Над фігурами трудилися талановиті скульптори – П. Войтович, Ю. Марковський, А. Попель, Е. Печ, Т. Баронч. Для внутрішнього оформлення приміщення були використані мармур, позолота. Тут можна побачити декоративний живопис художників Т. Попеля, М. Герасимовича, Т. Рибковського, З. Розвадовського, С. Дембіцького, С. Рейхана, ліпні орнаменти.
+    <li><p class="lviv">Львівський національний академічний театр опери та балету імені Соломії Крушельницької будувався протягом 1897 – 1900-их років. На той час над його проектом працював архітектор Зігмунд Горголевський. Будівля зведена в стилях – ренесанс та бароко. Об'єкт вражає, як ззовні, так і всередині, великим скульптурним декором. Над фігурами трудилися талановиті скульптори –  А. Попель,  Е. Печ, П. Войтович, Ю. Марковський, Т. Баронч. Для внутрішнього оформлення приміщення були використані мармур, позолота. Тут можна побачити декоративний живопис художників: Т. Рибковського, С. Рейхана ,  Т. Попеля, З. Розвадовського, С. Дембіцького, М. Герасимовича, ліпні орнаменти.
 
     </p></li>
 </div>
@@ -67,7 +67,7 @@
         <li><img width="600" height="371" src="./img/65_main-v1582879975.jpg" alt="Церква"></li>
         <li><img  width="495" height="371" src="./img/inter---yer-virmenskoyi-tserkvi----yuliya-sverchkova-1.jpg" alt="церква"></li>
     </ul>
-        <li><p class="lviv">Вірменський кафедральний собор Успіння Пресвятої Богородиці – це старовинна архітектурна пам'ятка Львова, що внесена до Всесвітньої спадщини ЮНЕСКО. Будівництво кам'яної будівлі храму розпочалося в 1356-ому році згідно проекту архітектора Доринга. Вірменський собор був центром духовного та культурного життя вірмен. В ансамблі храму переплітаються різні архітектурні стилі – вірменсько-орієнтальний (XIV сторіччя), ренесанс, бароко (XVII століття), східний (початку XX століття). Перед входом у, викладений плиткою, двір собору можна побачити вежу-дзвіницю автора Петра Красовського. Всередині храму перехоплює дух від вітражів, прикрашених різнокольоровою мозаїкою, стін. Тут зберігаються фрески – із зображенням Таємної вечері та «Розп'яття», над якими працював польський художник Ян Генрик Розен, а також живопис на вологій штукатурці - «Бачення Катерини Еммеріх», «Поховання святого Одеона» тощо. Двері собору відкриті щодня. Кожної неділі, об 11:00 тут проходить церковна служба.
+        <li><p class="lviv">Вірменський кафедральний собор Успіння Пресвятої Богородиці – це старовинна архітектурна пам'ятка Львова, що внесена до Всесвітньої спадщини ЮНЕСКО. Будівництво кам'яного  храму розпочалося в 1356-ому році згідно проекту архітектора Доринга. Вірменський собор був центром духовного та культурного життя вірмен. В ансамблі храму переплітаються різні архітектурні стилі – вірменсько-орієнтальний (XIV сторіччя), ренесанс, бароко (XVII століття), східний (початку XX століття). Перед входом у, викладений плиткою, двір собору можна побачити вежу-дзвіницю автора Петра Красовського. Всередині храму перехоплює дух від вітражів, прикрашених різнокольоровою мозаїкою, стін. Тут зберігаються фрески – із зображенням Таємної вечері та «Розп'яття», над якими працював польський художник Ян Генрик Розен, а також живопис на вологій штукатурці - «Бачення Катерини Еммеріх», «Поховання святого Одеона» тощо. Двері собору відкриті щодня. Кожної неділі, об 11:00 тут проходить церковна служба.
 
     
         </p></li>
@@ -138,7 +138,7 @@
                 </a> 
             </li>
             <li  class="network-item">
-                <a class="social-link" href="" >
+                <a class="social-link" href="https://twitter.com/Krytou_Sasha123?t=RK5uC7BwJt7QW31P2YmMRg&s=09" >
                     <svg class="social-icon" width="30" height="26">
                             <use href="./img/Icons.svg#icon-Twiter"></use>
                         </svg> 
