--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 <body>
     <header class="section1">
 <div class="contairn">
-    <ul>
+    <ul class="opij">
     <a class="logo-span" href=""> <span class="logo">Dark</span> Note</a>
     <svg width="30" height="30">
         <use  href="./img/symbol-defs.svg#icon-headphones"></use>
     </svg>
-   
+    
 </ul>
+
+
+
 </div>
 <section class="hero"> 
     <div class="contairn">
@@ -125,9 +128,16 @@
         </ul>
         <div class="join">
         <ul>
+            <h2 class="join-type">Контакти</h2>
             <li ><a class="phone" href="malito:tarnav1514@gmail.com">tarnav1514@gmail.com</a></li>
             <li ><a class="phone" href="phone:0985908510">098 590 85 10</a></li>
+            <div class="qwerty">
+                <h2 class="your">Про нас</h2>
+                <a class="logo-span3" href="./portfolio.html">Портфоліо</a>
+            </div>
         </ul>
+        <div class="join-link">
+        <b class="text" >Наші соц мережі</b>
         <div class="join">
         <ul class="social-network-list">
             <li class="network-item" > 
@@ -158,6 +168,7 @@
         </ul>
     
     </div>
+</div>
     </footer>
 </body>
 </html>
