--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="kisilov">
     <div class="card">
-        <li > <img src="./img/L_Old_London.svg.png " alt="Sorry("> </li>
+       <ul class="card123">
+        <li > <img width="200" height="200" src="./img/L_Old_London.svg.png " alt="Sorry("> </li>
         <p class="team">L</p>
         <p class="team-link">Front-end  Студент</p>
         <ul class="opq">
@@ -17,6 +20,8 @@
             <li class="scial"> <a class="social-link" href=""><svg class="coorent" width="20" height="20"> <use href="./img/icons/Icons.svg#icon-Facebook"></use> </svg> </a> </li>
             <li class="scial"><a class="social-link" href=""><svg class="coorent" width="20" height="20"> <use href="./img/icons/Icons.svg#icon-linkedin-1"></use> </svg> </a> </li>
         </ul>
+    </ul>
     </div>
+</header>
 </body>
 </html>
