--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@
         </ul>
     
     </div>
+    <ul class="input">
+        <h2>Джерела</h2>
+        <li><p>Hostel24.ua</p></li>
+    </ul>
 </div>
     </footer>
 </body>
